--- a/examples/basic-tsx/package.json
+++ b/examples/basic-tsx/package.json
@@ -5,8 +5,8 @@
     "dev": "tsnd --project tsconfig.server.json server/main.ts"
   },
   "dependencies": {
-    "@react-ssr/core": "latest",
-    "@react-ssr/express": "latest",
+    "@react-ssr-withLess/core": "latest",
+    "@react-ssr-withLess/express": "latest",
     "express": "^4.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
