--- a/examples/with-jsx-emotion/package.json
+++ b/examples/with-jsx-emotion/package.json
@@ -8,8 +8,8 @@
     "@emotion/cache": "^10.0.29",
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
-    "@react-ssr/core": "latest",
-    "@react-ssr/express": "latest",
+    "@react-ssr-withLess/core": "latest",
+    "@react-ssr-withLess/express": "latest",
     "create-emotion-server": "^10.0.27",
     "express": "^4.17.1",
     "react": "^16.13.1",
