--- a/examples/with-jsx-material-ui/package.json
+++ b/examples/with-jsx-material-ui/package.json
@@ -6,8 +6,8 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.9.7",
-    "@react-ssr/core": "latest",
-    "@react-ssr/express": "latest",
+    "@react-ssr-withLess/core": "latest",
+    "@react-ssr-withLess/express": "latest",
     "express": "^4.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
