--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@react-ssr/core",
+  "name": "@react-ssr-withLess/core",
   "version": "0.22.0",
   "description": "React SSR as a view template engine",
   "repository": "git@github.com:saltyshiomix/react-ssr.git",
@@ -54,10 +54,10 @@
     "lz-string": "^1.4.4",
     "memory-fs": "^0.5.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.13.1",
+    "less": "^3.11.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "recursive-readdir": "^2.2.2",
-    "sass-loader": "^8.0.2",
+    "less-loader": "^5.0.0",
     "slash": "^3.0.0",
     "terser-webpack-plugin": "^2.3.5",
     "unionfs": "^4.4.0",
