--- a/packages/nestjs-express/package.json
+++ b/packages/nestjs-express/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@react-ssr/nestjs-express",
+  "name": "@react-ssr-withLess/nestjs-express",
   "version": "0.22.0",
   "description": "React SSR as a view template engine",
   "repository": "git@github.com:saltyshiomix/react-ssr.git",
@@ -33,6 +33,6 @@
   ],
   "peerDependencies": {
     "@nestjs/platform-express": "^6 || ^7",
-    "@react-ssr/core": "^0.*"
+    "@react-ssr-withLess/core": "^0.*"
   }
 }
